# OpenDiS

./: .gitignore  CMakeLists.txt  cpu_compile.sh  gpu_compile.sh
core/pydis/python/: CMakeLists.txt
examples/01_loop/: config_exadis_loop.py  exadis_config.toml  test_disl_loop_exadis.py
examples/02_frank_read_src/: FR_src_config_exadis.py  exadis_config.toml  test_frank_read_src_exadis.py
examples/02_frank_read_src/output/: frank_read_src_exadis_final.json
examples/03_binary_junction/: BJ_config_exadis.py  exadis_config.toml
examples/03_binary_junction/output/: binary_junction_exadis_final.json
examples/06_paradis/: exadis_config.toml
examples/10_strain_hardening/: Strain_Hardening_config_exadis.py  convert_vtk.py  exadis_config.toml  test_strain_hardening_exadis.py  versiontest.py
python/config/: config_util.py  force_calculation_options.toml
stat_engine/: convert_vtk.py  exadis_config.toml  exports_CPU  exports_GPU  make_init_conf.py  pyrightconfig.json  resume_seed.py  run_seed.py  show_stress_strain.py  sim_utils.py  slip_system.py  tangent_density_extension_plan.md  tee  versiontest.py
stat_engine/data/: config_seed_3_axis_001.toml  config_seed_4_axis_001.toml
stat_engine/pvfiles/: README.md  slip_systems_by_burgers_vector.json  slip_systems_by_slip_plane.json  view_slip_systems.pvsm
stat_engine/run_Exadis/: .env  pyproject.toml
stat_engine/run_Exadis/src/run_exadis/: __init__.py  cli.py  convert_vtk.py  pyexadis_import.py  resume_seed.py  run_seed.py  show_stress_strain.py  sim_utils.py  slip_system.py
(+21 files in other folders)
