[project]
name = "run-exadis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joseph P Anderson", email = "janderson19@carthage.edu" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scipy>=1.18.0",
]

[project.scripts]
run-exadis = "run_exadis.cli:cli"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
